<resources>
    <string name="app_name">!나만의다이어리!</string>
    <string name="data_tv">여기는글</string>
    <string name="content_tv">여기날짜</string>
    <string name="show_Title">나의 일상</string>
    <string name="title">제목:</string>
    <string name="content">내용:</string>
    <string name="txt_diary_login">다이어리 로그인</string>
    <string name="txt_diary_regi"> 회원가입</string>
    <string name="txt_id_input">아이디</string>
    <string name="txt_id_name">이름</string>
    <string name="txt_password_input">비밀번호</string>
    <string name="txt_password_inputS">비밀번호확인</string>
    <string name="txt_login_btn">로그인</string>
    <string name="txt_register">회원가입</string>
    <string name="txt_auto_login">자동 로그인</string>
    <string name="txt_find_id_pw">아이디/비밀번호 찾기</string>
    <string name="txt_edit">수정</string>
    <string name="txt_delete">삭제</string>
    <string name="txt_title">제목</string>
    <string name="txt_content_input">내용을 입력하세요.</string>
    <string name="txt_write">작성</string>
    <string name="txt_add">추가</string>
</resources>
