<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".RegisterActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/txt_diary_regi"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal"
        android:weightSum="10">

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:orientation="vertical"
            android:weightSum="12">
            <EditText
                android:id="@+id/regi_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:hint="@string/txt_id_name" />
            <EditText
                android:id="@+id/regi_id"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:hint="@string/txt_id_input" />
            <Button
                android:id="@+id/checkcheck"
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="중복체크"
                />

            <EditText
                android:id="@+id/regi_pass"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:hint="@string/txt_password_input"

                />
            <EditText
                android:id="@+id/regi_pass_check"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:hint="@string/txt_password_inputS" />




            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".4" />

            <Button
                android:id="@+id/regi_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:background="@color/colorPrimaryDark"
                android:text="@string/txt_register"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />


        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>
</LinearLayout>