<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/txt_diary_login"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal"
        android:weightSum="0">

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:orientation="vertical"
            android:weightSum="10"
            >

            <EditText
                android:id="@+id/main_id_input"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:hint="@string/txt_id_input" />

            <EditText
                android:id="@+id/main_pw_input"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:hint="@string/txt_password_input"
                android:inputType="textPassword"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/main_login_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:background="@color/colorButton"
                android:text="@string/txt_login_btn"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".4" />

            <Button
                android:id="@+id/main_reg_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:background="@color/colorButton"
                android:text="@string/txt_register"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="10">

                <CheckBox
                    android:id="@+id/main_auto_login_check"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4.5"
                    android:text="@string/txt_auto_login" />


            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>