<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="10"
    tools:context=".WritingActivity">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:orientation="vertical"
        android:weightSum="10">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5" />

        <EditText
            android:id="@+id/title_et"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/memo_box"
            android:gravity="center"
            android:hint="@string/txt_title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5" />

        <EditText
            android:id="@+id/content_et"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="@drawable/memo_box"
            android:gravity="top"
            android:hint="@string/txt_content_input"
            android:inputType="textMultiLine" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5" />

        <Button
            android:id="@+id/input_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorButton"
            android:text="@string/txt_write"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
